--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,9 +25,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install black pytest wheel
         pip install .
+        pip list
     - name: Lint with black
       run: |
         black .
     - name: Test with pytest
       run: |
-        pytest
+        pytest .
