--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,11 +23,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install black pytest
+        pip install black pytest wheel
         pip install .
     - name: Lint with black
       run: |
         black .
     - name: Test with pytest
       run: |
-        pytest
+        pytest .
